# paged-alloc

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: alloc.rs
docs/: design.md
examples/: append_log.rs  file_cache.rs  hello.rs  pages.rs  prewarm.rs  share_across_threads.rs  tenants.rs
scripts/: bench.sh
src/: chunk.rs  lib.rs  mmap.rs  page.rs  pool.rs  source.rs  tenant.rs
tests/: integration.rs
